@@ -1230,49 +1230,6 @@ class tx_oelib_testingFramework_testcase extends tx_phpunit_testcase {
 
 
 	// ---------------------------------------------------------------------
-	// Tests regarding getAssociativeDatabaseResult()
-	// ---------------------------------------------------------------------
-
-	public function testGetAssociativeDatabaseResultThrowsExceptionIfResourceIsFalse() {
-		$this->setExpectedException('tx_oelib_Exception_Database');
-
-		$this->fixture->getAssociativeDatabaseResult(false);
-	}
-
-	public function testGetAssociativeDatabaseResultThrowsExceptionIfDataBaseResultIsEmpty() {
-		$this->setExpectedException('tx_oelib_Exception_EmptyQueryResult');
-
-		$uid = $this->fixture->createRecord(
-			OELIB_TESTTABLE, array('title' => '')
-		);
-		$dbResult = $GLOBALS['TYPO3_DB']->exec_SELECTquery(
-			'title',
-			OELIB_TESTTABLE,
-			'uid = ' . $uid.' AND title = "foo"'
-		);
-		$this->fixture->getAssociativeDatabaseResult($dbResult);
-
-		$GLOBALS['TYPO3_DB']->sql_free_result($dbResult);
-	}
-
-	public function testGetAssociativeDatabaseResultSucceedsForNonEmptyResults() {
-		$uid = $this->fixture->createRecord(OELIB_TESTTABLE);
-		$dbResult = $GLOBALS['TYPO3_DB']->exec_SELECTquery(
-			'uid',
-			OELIB_TESTTABLE,
-			'uid = ' . $uid
-		);
-
-		$this->assertEquals(
-			array('uid' => $uid),
-			$this->fixture->getAssociativeDatabaseResult($dbResult)
-		);
-
-		$GLOBALS['TYPO3_DB']->sql_free_result($dbResult);
-	}
-
-
-	// ---------------------------------------------------------------------
 	// Tests regarding getAutoIncrement()
 	// ---------------------------------------------------------------------
 
@@ -2538,142 +2495,6 @@ class tx_oelib_testingFramework_testcase extends tx_phpunit_testcase {
 			'Exception', 'The column "uid" must not be set in $recordData.'
 		);
 		$this->fixture->createContentElement(0, array('uid' => 99999));
-	}
-
-
-	// ---------------------------------------------------------------------
-	// Tests regarding createCachePageEntry()
-	// ---------------------------------------------------------------------
-
-	public function testPageCacheEntryCanBeCreated() {
-		$this->markAsSkippedForTypo3Greater42();
-
-		$id = $this->fixture->createPageCacheEntry();
-
-		$this->assertNotEquals(
-			0,
-			$id
-		);
-
-		$this->assertEquals(
-			1,
-			$this->fixture->countRecords(
-				'cache_pages', 'id='.$id
-			)
-		);
-	}
-
-	public function testPageCacheEntryCanBeCreatedForACertainFrontEndPage() {
-		$this->markAsSkippedForTypo3Greater42();
-
-		$parentUid = $this->fixture->createFrontEndPage();
-		$id = $this->fixture->createPageCacheEntry($parentUid);
-
-		$this->assertNotEquals(
-			0,
-			$id
-		);
-
-		$row = tx_oelib_db::selectSingle(
-			'page_id',
-			'cache_pages',
-			'id = '.$id
-		);
-
-		$this->assertEquals(
-			$parentUid,
-			$row['page_id']
-		);
-	}
-
-	public function testCachePagesCanBeDirty() {
-		$this->markAsSkippedForTypo3Greater42();
-
-		$this->assertEquals(
-			0,
-			count($this->fixture->getListOfDirtySystemTables())
-		);
-		$id = $this->fixture->createPageCacheEntry();
-		$this->assertNotEquals(
-			0,
-			$id
-		);
-
-		$this->assertNotEquals(
-			0,
-			count($this->fixture->getListOfDirtySystemTables())
-		);
-	}
-
-	public function testCachePagesWillBeCleanedUp() {
-		$this->markAsSkippedForTypo3Greater42();
-
-		$id = $this->fixture->createPageCacheEntry();
-		$this->assertNotEquals(
-			0,
-			$id
-		);
-
-		$this->fixture->cleanUp();
-		$this->assertEquals(
-			0,
-			$this->fixture->countRecords(
-				'cache_pages', 'id='.$id
-			)
-		);
-	}
-
-	public function testPageCacheEntryMustHaveNoZeroId() {
-		$this->markAsSkippedForTypo3Greater42();
-
-		$this->setExpectedException(
-			'Exception', 'The column "id" must not be set in $recordData.'
-		);
-		$this->fixture->createPageCacheEntry(0, array('id' => 0));
-	}
-
-	public function testPageCacheEntryMustHaveNoNonZeroId() {
-		$this->markAsSkippedForTypo3Greater42();
-
-		$this->setExpectedException(
-			'Exception', 'The column "id" must not be set in $recordData.'
-		);
-		$this->fixture->createPageCacheEntry(0, array('id' => 99999));
-	}
-
-	public function testPageCacheEntryMustHaveNoZeroPageId() {
-		$this->markAsSkippedForTypo3Greater42();
-
-		$this->setExpectedException(
-			'Exception', 'The column "page_id" must not be set in $recordData.'
-		);
-		$this->fixture->createPageCacheEntry(0, array('page_id' => 0));
-	}
-
-	public function testPageCacheEntryMustHaveNoNonZeroPageId() {
-		$this->markAsSkippedForTypo3Greater42();
-
-		$this->setExpectedException(
-			'Exception', 'The column "page_id" must not be set in $recordData.'
-		);
-		$this->fixture->createPageCacheEntry(0, array('page_id' => 99999));
-	}
-
-	public function test_PageCacheEntry_ForTypo3Above42_ThrowsException() {
-		if (t3lib_div::int_from_ver(TYPO3_version) < 4002999) {
-			$this->markTestSkipped(
-				'This test is only applicable for TYPO3 versions higher than ' .
-				'4.2.'
-			);
-		}
-
-		$this->setExpectedException(
-			'Exception',
-			'The function createPageCacheEntry must not be used in TYPO3 ' .
-				'versions above 4.2.'
-		);
-
-		$this->fixture->createPageCacheEntry(0, array('id' => 0));
 	}
 
 
