@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3044] Change: Remove deprecated functions for 0.7.0
 - [#2692| Feature: Add markNodesVisible function to visibility tree
 - [#2834] Feature: Add db::selectColumnForMultiple
 - [#3080] Feature: Add an object factory
